--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "alloyfinger": "^0.1.11",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "css-loader": "^0.28.7",
     "expose-loader": "^0.7.4",
     "jquery": "^3.2.1",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "webpack": "^2.7.0",
     "webpack-dev-server": "^2.9.7"
   },
   "dependencies": {
+    "animate.css": "^3.5.2",
     "node-sass": "^4.7.2"
   }
 }
